# cursortrack

./: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
cursortrack/: __init__.py  __main__.py
cursortrack/backends/: __init__.py  _pynput_listener.py  _touchpad_scroll.py  _windows_hid.py  _windows_touchpad.py  base.py  linux.py  macos.py  windows.py
cursortrack/cli/: __init__.py  _format.py  _io.py  app.py  devices.py  doctor.py  export.py  info.py  play.py  record.py
cursortrack/core/: __init__.py  codec.py  events.py  format.py  layout.py  session.py
cursortrack/core/playback/: __init__.py  compat.py  mapping.py  transform.py
cursortrack/export/: __init__.py  csv_export.py  jsonl_export.py  npy_export.py  parquet_export.py
docs/: architecture.md  file-format.md  playback-mapping.md
docs/rfcs/: 0001-portable-session-v3.md
tests/: __init__.py  conftest.py  test_cli.py  test_codec.py  test_compat.py  test_doctor.py  test_export.py  test_io.py  test_layout.py  test_linux_backend.py  test_macos_backend.py  test_package.py  test_play_failsafe.py  test_play_scroll.py  test_session.py  test_transform.py  test_v3_fixtures.py  test_windows_backend.py  test_windows_hid.py  test_windows_touchpad.py
tests/fixtures/v3/: empty.hex  manifest.json  multi_chunk.hex  single_move.hex
