[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursortrack"
version = "0.2.2"
description = "Professional, cross-platform mouse and input tracking CLI tool and library."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "CursorTrack Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
zstd = [
    "zstandard>=0.15.0",
]
ml = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
]
windows = [
    "pynput>=1.8.0",
]
linux = [
    "pynput>=1.8.0",
]
macos = [
    "pynput>=1.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pynput>=1.8.0",
]

[project.scripts]
cursortrack = "cursortrack.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cursortrack*"]

[tool.setuptools.package-data]
cursortrack = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "PL", "RUF", "B", "C4", "SIM", "ARG"
]
ignore = [
    "PLR2004", # Magic values are fine in tests and calculations
    "PLR0913", # Too many arguments in functions
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLC0415", # Import should be at top-level (fine for optional dependencies)
    "B904",    # raise from (fine for clean ImportError wrappers)
    "E501",    # Line too long (acceptable for long logging messages and visual tables)
    "UP031",   # Use format specifiers instead of percent format (acceptable for binary mappings)
    "PLW0603", # Using global statement is discouraged (required for clean SIGINT / STOP signal polling)
    "SIM115",  # Use context manager for opening files (manually closed in try/finally due to dynamic listener shutdowns)
    "SIM105",  # Use suppress instead of try-except-pass (acceptable python syntax)
    "UP045",   # Use `X | None` instead of `Optional[X]` - Typer calls typing.get_type_hints()
               # on every CLI command function, which forces runtime evaluation of the
               # (otherwise-lazy, thanks to `from __future__ import annotations`) annotation.
               # `X | None` needs `type.__or__` (PEP 604), added in 3.10, so it crashes on
               # 3.9 despite being valid *syntax*. Optional[X] works on every supported version.
]

[tool.mypy]
# Pinned to 3.12 (not requires-python's 3.9 floor) because numpy's bundled stubs use
# PEP 695 `type` statement syntax that mypy will only parse under python_version >= 3.12,
# and numpy is pulled in transitively via the `ml` extra. This only affects mypy's static
# analysis assumptions, not the runtime floor: actual 3.9-3.12 compatibility is verified
# by running the real pytest suite under each interpreter in CI.
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=cursortrack --cov-report=term-missing"
testpaths = [
    "tests",
]
